<resources>
    <string name="app_name">SwiftJob</string>
    <string name="default_web_client_id">"409813508550-l1tio9td84hm979tr4qv57d5eeqdv5f9.apps.googleusercontent.com"</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_new">Create new</string>
    <string name="account">account</string>
    <string name="enter_your_password">Password</string>
    <string name="enter_your_email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="nested_scroll_view">Nested scroll view</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="continue_">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App logo</string>
    <string name="user_icon">user icon</string>
    <string name="nestedscrollview">NestedScrollView</string>
    <string name="search_job">Search job…</string>
    <string name="filter">Filter</string>
    <string name="navigate">Navigate</string>
    <string name="password_security_personal_details">Password, security, personal details</string>
    <string name="manage_your_connected_experiences_and_account_settings">Manage your connected experiences and account settings</string>
    <string name="dennistoochi_gmail_com">dennistoochi@gmail.com</string>
    <string name="_0">0</string>
    <string name="blocked">Blocked</string>
    <string name="public_">Public</string>
    <string name="account_privacy">Account privacy</string>
    <string name="who_can_see_your_content">Who can see your content</string>
    <string name="accounts_centre">Accounts Centre</string>
    <string name="your_account">Your account</string>
    <string name="settings_and_privacy">Settings</string>
    <string name="email">Email</string>
    <string name="password_and_security">Change your password</string>
    <string name="email_address">Email address</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="create_post">Create post</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="timeline">Timeline</string>
    <string name="toochukwu_dennis">Toochukwu Dennis</string>
    <string name="good_morning">Good morning,</string>
    <string name="search_job_dream">Search your dream job right now!</string>
    <string name="get_started">Get started</string>
    <string name="job_details">Job details</string>
    <string name="apply_now">Apply now</string>
    <string name="naira">\u20A6</string>
    <string name="upload_cv">Upload CV</string>
    <string name="have_not_posted_job">You haven\'t posted a job yet! Get started by using the button below.</string>
    <string name="have_not_applied_job">You haven\'t applied for a job yet!</string>
    <string name="no_internet">Oops! Something went wrong. Please check your connection and try again.</string>
    <string name="save">Save</string>
    <string name="please_provide_email">Please provide email</string>
    <string name="please_provide_password">Please provide password</string>
    <string name="please_provide_phone_number">Please provide phone number</string>
    <string name="please_provide_first_name">Please provide first name</string>
    <string name="please_provide_lastname">Please provide lastname</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="please_provide_country">Please provide country</string>
    <string name="please_provide_city">Please provide city</string>
    <string name="please_provide_school">Please provide school</string>
    <string name="please_provide_job_title">Please provide job title</string>
    <string name="please_provide_company_name">Please provide company name</string>
    <string name="please_provide_end_date">Please provide end date</string>
    <string name="please_provide_start_date">Please provide start date</string>
    <string name="please_provide_about">Please provide about</string>
    <string name="please_add_skills">Please add skills</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="about">About</string>
    <string name="top_skills">Top skills</string>
    <string name="add_experience">Add experience</string>
    <string name="indicates_required">* Indicates required</string>
    <string name="title">Title*</string>
    <string name="employee_type">Employee type</string>
    <string name="please_select">Please select</string>
    <string name="company_name">Company name*</string>
    <string name="ex_digital_dreams_limited">Ex: Digital Dreams Limited</string>
    <string name="location">Location</string>
    <string name="ex_fuw">Ex: FUW</string>
    <string name="location_type">Location type</string>
    <string name="i_am_currently_working_in_this_role">I am currently working in this role</string>
    <string name="start_date">Start date</string>
    <string name="december_2023">Ex: December, 2023</string>
    <string name="end_date">End date</string>
    <string name="edit_about">Edit about</string>
    <string name="about_des">You can write about your years of experience, industry, or skills. People also talk about their achievements or previous job experiences.</string>
    <string name="type_here">Type here...</string>
    <string-array name="skills">
        <item>Core Java</item>
        <item>Python Programming Language</item>
        <item>Web Development</item>
        <item>Database Management</item>
        <item>Cloud Computing</item>
        <item>Cybersecurity</item>
        <item>Networking</item>
        <item>DevOps</item>
        <item>Agile Methodologies</item>
        <item>Machine Learning and AI</item>
        <item>Mobile App Development</item>
        <item>Data Analysis</item>
        <item>UI/UX Design</item>
        <item>Linux System Administration</item>
        <item>Version Control</item>
        <item>Problem-Solving</item>
    </string-array>
    <string name="skills_des">Show your top skills. They\'ll also appear in your Skills section. You can only select 5.</string>
    <string name="add_education">Add education</string>
    <string name="school">School*</string>
    <string name="ex_federal_university_wukari">Ex: Federal University Wukari</string>
    <string name="degree">Degree</string>
    <string name="ex_bacheclor_s">Ex: Bacheclor\'s</string>
    <string name="field_of_study">Field of study</string>
    <string name="computer_science">Ex: Computer science</string>
    <string name="end_date_or_expected">End date (or expected)</string>
    <string name="grade">Grade</string>
    <string name="first_class">Ex: First class</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="_0000000000">0000000000</string>
    <string name="edit_contact_info">Edit contact info</string>
    <string name="number_of_employees">Number of employees</string>
    <string name="company_s_description">Company\'s description*</string>
    <string name="cac_id">CAC ID*</string>
    <string name="edit_company_info">Edit company info</string>
    <string name="ict">ICT</string>
    <string name="position">Position</string>
    <string name="please_provide_description">Please provide description</string>
    <string name="please_provide_cac_id">Please provide CAC ID</string>
    <string name="personal_information">Personal information</string>
    <string name="contact_information">Contact information</string>
    <string name="your_company">Your company</string>
    <string name="company_information">Company information</string>
    <string name="employees">Employees</string>
    <string name="general">General</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="temporary">Temporary</string>
    <string name="volunteer">Volunteer</string>
    <string name="internship">Internship</string>
    <string name="full_time">Full-time</string>
    <string name="contract">Contract</string>
    <string name="part_time">Part-time</string>
    <string name="choose_the_job_type">Choose the job type</string>
    <string name="confirm">Confirm</string>
    <string name="please_provide_location">Please provide location</string>
    <string name="please_select_workplace_type">Please select workplace type</string>
    <string name="please_select_job_type">Please select job type</string>
    <string name="please_provide_pay_rate">Please provide pay rate</string>
    <string name="please_provide_pay">Please provide pay</string>
    <string name="welcome_to_swift_job">Welcome to Swift Job</string>
    <string name="employer_body">Congratulations on creating your employer account. You\'re now ready to start hiring top talent. Good luck on your journey with Swift Job</string>
    <string name="congratulations_on_posting_your_job">Congratulations on Posting Your Job!</string>
    <string name="job_is_live">Your job listing is live now. Good luck finding the perfect candidate!</string>
    <string name="great">Great!</string>
    <string name="awesome">Awesome!</string>
    <string name="good_afternoon">Good afternoon,</string>
    <string name="good_evening">Good evening,</string>
    <string name="please_upload_cv">Please upload CV</string>
    <string name="please_provide_name">Please provide name</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_mail">Send mail</string>
    <string name="call">Call</string>
    <string name="view_cv">View CV</string>
    <string name="job_description">Job description</string>
    <string name="no_notifications">You have no notifications right now. Come back later</string>
    <string name="best_regards">Best regards,</string>
    <string name="update_on_your_job_application">Update on Your Job Application</string>
    <string name="congratulations_your_job_application_was_accepted">Congratulations! Your Job Application was Accepted</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="third_screen_tour">For employers, SwiftJob is more than a recruitment tool—it\'s your strategic hiring companion. Discover exceptional talent effortlessly and build your dream team.</string>
    <string name="empower_your_hiring_experience">Empower Your Hiring Experience</string>
    <string name="unlock_your_career_potential">Unlock Your Career Potential</string>
    <string name="second_screen_tour">Embark on a journey where every click opens doors to new possibilities. SwiftJob is not just a platform; it\'s a partner in your professional growth.</string>
    <string name="first_screen_tour">Explore a world of opportunities tailored just for you. Whether you\'re seeking the perfect job or looking to hire top talent, SwiftJob is your gateway to success.</string>
    <string name="welcome_to_swiftjob">Welcome to SwiftJob</string>
</resources>