<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.dialogs.JobTypeDialogFragment">

    <include layout="@layout/divider" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/choose_the_job_type"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16"
        android:text="@string/part_time"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <include layout="@layout/material_divider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/dimen_16"
        android:text="@string/contract"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <include layout="@layout/material_divider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/dimen_16"
        android:text="@string/full_time"
        android:textColor="@color/black" />

    <include layout="@layout/material_divider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/dimen_16"
        android:text="@string/internship"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <include layout="@layout/material_divider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/dimen_16"
        android:text="@string/temporary"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <include layout="@layout/material_divider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/dimen_16"
        android:text="@string/volunteer"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

</LinearLayout>