<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.fragment.EducationDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/pale_silver"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/navigateUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="6dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/app_logo"
                android:padding="@dimen/dimen_10"
                android:src="@drawable/ic_x" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/dimen_16"
                android:text="@string/add_education"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nested_scroll_view"
        android:fillViewport="true"
        android:scrollIndicators="right"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/indicates_required"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/school"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/schoolNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/black"
                android:hint="@string/ex_federal_university_wukari"
                android:inputType="textCapSentences"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/degree"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/degreeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/black"
                android:hint="@string/ex_bacheclor_s"
                android:inputType="textCapSentences"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/field_of_study"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/fieldOfStudyTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/black"
                android:hint="@string/computer_science"
                android:inputType="textCapSentences"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/start_date"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/startDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:backgroundTint="@color/black"
                android:drawableEnd="@drawable/ic_calendar"
                android:focusableInTouchMode="false"
                android:hint="@string/december_2023"
                android:inputType="date"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/end_date_or_expected"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/endDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:focusableInTouchMode="false"
                android:backgroundTint="@color/black"
                android:drawableEnd="@drawable/ic_calendar"
                android:hint="@string/december_2023"
                android:inputType="date"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/grade"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/gradeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:backgroundTint="@color/black"
                android:imeOptions="actionDone"
                android:hint="@string/first_class"
                android:inputType="textCapSentences"
                android:textColor="@color/black" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:backgroundTint="@color/shade_green"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>