<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".common.fragments.ThirdScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/empower" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:padding="@dimen/dimen_16"
            android:text="@string/empower_your_hiring_experience"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_screen_tour"
            android:textAlignment="center"
            android:textSize="@dimen/text_16" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/finishButton"
            android:layout_marginTop="@dimen/dimen_64"
            android:backgroundTint="@color/shade_green"
            android:contentDescription="@string/finish"
            android:text="@string/finish"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>