<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_logo" />

    <android.widget.Button
        android:id="@+id/singInButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginEnd="@dimen/dimen_32"
        android:background="@drawable/drawable_sign_in"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_32"
        android:background="@drawable/drawable_create_account"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/shade_green"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

</LinearLayout>